Make EntitlementChecker checks closer to current/real ES implementation